# IDA-Pro-SigMaker

./: .gitignore  .gitmodules  CMakeLists.txt
IDA Pro SigMaker/: Main.cpp  Main.h  Utils.h
src/: Main.cpp  Main.h  Plugin.h  SignatureUtils.cpp  SignatureUtils.h  Utils.cpp  Utils.h  Version.h
